--- a/src/components/style/ItemDetContainer.css
+++ b/src/components/style/ItemDetContainer.css
@@ -1,5 +1,8 @@
+
 .ItemDetailContainer {
     width: 100%;
+    height:20%;
+    padding-bottom: 70px;
     display: flex;
     justify-content: center;
     align-items: center;
